libs/@local/hashql/hir/tests/ui/lower/checking/type-assertion-smaller.jsonc
//@ run: fail
//@ description: Ensures type checking fails when asserting a supertype (Number) is a subtype (Integer).
["is", { "#literal": 42.12 }, "Integer"] // checking DOWN fails
//~^ ERROR Type mismatch in this expression
